fix(problem): fix problem page divider caused viewport horizontal scrolling

--- a/src/pages/problem/view/ProblemViewPage.module.less
+++ b/src/pages/problem/view/ProblemViewPage.module.less
@@ -81,7 +81,8 @@
 }
 
 .divider {
-  margin: 0 -233333px 37.5px !important;
+  margin: 0 0 37.5px calc(50% - 50vw) !important;
+  width: 100vw;
 }
 
 .statementView {
